Fixed zoom box creating scrollbars in comic pages

--- a/themes/base-Simple.css
+++ b/themes/base-Simple.css
@@ -348,8 +348,9 @@ ol li{
 .comicPageBackground{
 	/*
 	background-image: var(--staticBackground);
+	filter: blur(5px);
 	*/
-	filter: blurr(5px);
+	overflow: hidden;
 }
 .menuButtonBox{
 	width: 3rem;
